color contrast fixes for dark mode

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -6,6 +6,13 @@
   --ifm-color-primary-dark: #554e89;
   --ifm-color-primary-darker: #514a81;
   --ifm-color-primary-darkest: #423d6a;
+  --verify-bg: green;
+}
+
+html[data-theme='dark'] {
+  --ifm-color-emphasis-0: #121010;
+  --ifm-color-primary: #ad9eff;
+  --verify-bg: #00bb59;
 }
 
 .fakeHeading {
@@ -19,13 +26,13 @@ h3 {
 }
 
 .verify > .button {
-  background: green;
+  background: var(--verify-bg);
 }
 
 .customButton {
-  border: 1px solid black;
+  border: 1px solid var(--ifm-color-emphasis-600);
   width: 65px;
-  background-color: lightgray;
+  background-color: var(--ifm-color-emphasis-200);
   text-align: center;
 }
 
